# RetiCalc-2526-ITPSUniba-G12

./: CMakeLists.txt  README.md
SourceTCP_G12/: client.c  globali.c  main.h  server.c  utility.c
SourceUDP_G12/: client.c  main.h  server.c  utility.c
